Bug 278008 - "Extra arguments" to cmake have no effect
Summary: "Extra arguments" to cmake have no effect
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: VHI normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-18 12:34 UTC by pmidden
Modified: 2011-08-04 00:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pmidden 2011-07-18 12:34:50 UTC
Version:           git master (using Devel) 
OS:                Linux

Writing text into the "Extra arguments" text field has no effect on the cmake invocation.

Reproducible: Always

Steps to Reproduce:
1. Create/import a cmake project
2. Go to "Project -> Open Configuration..."
3. Click on the "+"
4. Add stuff to "Extra arguments"
5. Choose the correct directory in the dropdown
6. Let cmake configure itself

Actual Results:  
No extra arguments are passed to cmake.

Expected Results:  
The extra arguments are passed to the cmake command line.
Comment 1 Milian Wolff 2011-07-18 15:20:14 UTC
confirmed, Aleix, can you take a look at it please?
Comment 2 Aleix Pol 2011-08-04 00:13:34 UTC
Git commit ac2269338d48abec8379626688863c299625d369 by Aleix Pol.
Committed on 04/08/2011 at 02:10.
Pushed by apol into branch '4.2'.

Always pass the arguments specified at builddir creation when reconfiguring a build directory.

BUG: 278008

Conflicts:

	projectbuilders/cmakebuilder/cmakejob.cpp

M  +24   -25   projectbuilders/cmakebuilder/cmakejob.cpp

http://commits.kde.org/kdevelop/ac2269338d48abec8379626688863c299625d369
Comment 3 Aleix Pol 2011-08-04 00:13:34 UTC
Git commit 3b18c2e9725083b70a5acd84664125463710f343 by Aleix Pol.
Committed on 04/08/2011 at 02:10.
Pushed by apol into branch 'master'.

Always pass the arguments specified at builddir creation when reconfiguring a build directory.

BUG: 278008

M  +22   -28   projectbuilders/cmakebuilder/cmakejob.cpp

http://commits.kde.org/kdevelop/3b18c2e9725083b70a5acd84664125463710f343