Always pass the arguments specified at builddir creation when reconfiguring a build directory.

BUG: 278008